docs/fluxcd/apps/comments/base/comments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments
  namespace: comments
spec:
  selector:
    app: commentsapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
