docs/fluxcd/apps/comments/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: comments
spec:
  selector:
    app: valkey
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
